# GeneralProjects

./: README.md
Utils/: README.md
alsarec/: CMakeLists.txt  alsarec_gdb_arm-poky-linux-gnueabi.launch
alsarec/Debug/: CMakeCache.txt  Makefile  alsarec  cmake_install.cmake
alsarec/inc/: allocator.h  alsarec.h  progressbar.h
alsarec/src/: allocator.c  alsarec.c  main.c  progressbar.c
anybus_access/: CMakeLists.txt  anybus_access_gdb_arm-poky-linux-gnueabi.launch
anybus_access/Debug/: CMakeCache.txt  Makefile  anybus_access  cmake_install.cmake
anybus_access/inc/: abio.h  abobject.h  anybus.h  crc.h  gpio.h
anybus_access/src/: abio.c  abobject.c  anybus.c  crc.c  gpio.c  main.c
freertos_wake_Mess/: freertos_wake.c  lpm.c  pin_mux.c  rdc_dbg.c  rdc_dbg.h  readme.txt
freertos_wake_Mess/armgcc/: CMakeLists.txt  build_log.txt  config.cmake
neon-hello/: CMakeLists.txt  neon-hello_gdb_arm-poky-linux-gnueabi.launch  toolchain.cmake
neon-hello/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  neon-hello
neon-hello/src/: main.cpp
opencl_exercises/block_avg/: blockAverage.c  blockAverage.cl
opencl_exercises/block_avg_select/: blockAverage.c  blockAverage.cl  blockAverageSelect
opencl_exercises/block_reduced/: helloworld  helloworld.c  helloworld.cl
opencl_exercises/mem_copy/: helloworld  helloworld.c  helloworld.cl
pcap-hello/: CMakeLists.txt  pcap-hello_gdb_arm-poky-linux-gnueabi.launch
pcap-hello/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  pcap-hello
pcap-hello/src/: main.c
tree_dulieu_cay_nhi_phan/debugs/: valgrind.cmd.txt
tree_dulieu_cay_nhi_phan/src/: tree.c
uartloop/: CMakeLists.txt  uartloop_gdb_arm-poky-linux-gnueabi.launch
uartloop/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  uartloop
uartloop/inc/: common.h
uartloop/src/: main.c
